# software-defined-retro-rom

./: .gitignore  CHANGELOG.md  INSTALL.md  Makefile  README.md  RELEASE.md  release.md  version.md
.github/workflows/: ci.yml  release.yml
ci/: blacklist-config.txt  build.sh  mcu-variants.txt  size-incompatible.txt  stm-variants.txt  tests.txt
ci/docker/: Dockerfile  Dockerfile.build  README.md
config/: README.md  bank-1541.mk  bank-vic20-char-fun.mk  blank.mk  c64-no-destestmax.mk  set-1541.mk  set-c64.mk  set-vic20-pal.mk  test-sdrr-0.mk  vic20-pal.mk
config/docker/: README.md
config/user/: README.md
demo/: build.sh  intro-c64.bas  intro-vic20.bas  one-c64.bas  rpc64.asm
docs/: BUILD-SYSTEM.md  COMPATIBILITY.md  CONFIGURATION.md  CUSTOM-HARDWARE.md  FAQ.md  FUTURE-ENHANCEMENTS.md  IMAGE-SELECTION.md  LOGGING.md  MANUFACTURING-TEST.md  MCU-SELECTION.md  MULTI-ROM-SETS.md  PI-PICO-PROGRAMMER.md  PROGRAMMING.md  RP2350.md  RUNTIME-ACCESS.md  STM32-CLONES.md  STM32-SELECTION.md  TECHNICAL-DETAILS.md  TECHNICAL-SUMMARY.md  VOLTAGE-LEVELS.md  release-notes-common.md
rust/: Cargo.toml
rust/sdrr-check/: Cargo.toml  README.md
rust/sdrr-common/: Cargo.toml  README.md
rust/sdrr-common/src/: args.rs  hardware.rs  lib.rs  sdrr_types.rs
rust/sdrr-fw-parser/: Cargo.toml  README.md
rust/sdrr-fw-parser/src/: info.rs  lib.rs  parsing.rs  readers.rs  types.rs
rust/sdrr-gen/: Cargo.toml
rust/sdrr-gen/src/: args.rs  config.rs  file.rs  generator.rs  main.rs  preprocessor.rs
rust/sdrr-info/: Cargo.toml
rust/sdrr-info/src/: args.rs  load.rs  main.rs  symbols.rs  utils.rs
sdrr/: GPIO.md  Makefile  NOTES.md  README.md
sdrr-common/: Cargo.toml
sdrr-common/src/: args.rs  hardware.rs  lib.rs  sdrr_types.rs
sdrr-gen/: Cargo.toml
sdrr-gen/src/: config.rs  generator.rs  hardware.rs  main.rs  preprocessor.rs  rom_types.rs
sdrr-hw-config/: 24-d.json  24-e.json  24-f.json  24-g.json  28-a.json  README.md  p24-a.json
sdrr-info/: Cargo.toml  README.md
sdrr-info/src/: args.rs  load.rs  main.rs  symbols.rs
sdrr-pcb/: README.md
sdrr-pcb/unverified/: README.md
sdrr-pcb/unverified/24-pin-rev-e/: README.md
sdrr-pcb/unverified/24-pin-rev-f/: README.md
sdrr-pcb/unverified/24-pin-rev-f/gerbers/: sdrr rev f-B_Mask.gbr  sdrr rev f-F_Cu.gbr
sdrr-pcb/unverified/28-pin-rev-a/: README.md
sdrr-pcb/unverified/28-pin-rev-a/gerbers/: sdrr 28 rev a-B_Mask.gbr  sdrr 28 rev a-B_Paste.gbr  sdrr 28 rev a-Edge_Cuts.gbr  sdrr 28 rev a-F_Cu.gbr  (+5 more)
sdrr-pcb/unverified/esp32-wifi-prog-rev-a/: README.md
sdrr-pcb/unverified/rev-e/: README.md
sdrr-pcb/unverified/stm32-f4-24-pin-rev-f2/: README.md
sdrr-pcb/unverified/stm32f4-24-pin-rev-e/: README.md
sdrr-pcb/unverified/stm32f4-24-pin-rev-f/: README.md
sdrr-pcb/unverified/stm32f4-24-pin-rev-g/: README.md
sdrr-pcb/unverified/stm32f4-28-pin-rev-a/: README.md
sdrr-pcb/unverified/wifi-prog-rev-a/: README.md
sdrr-pcb/verified/: README.md
sdrr-pcb/verified/24-pin-rev-d/: README.md
sdrr-pcb/verified/rev-d/: README.md
sdrr-pcb/verified/rp2350-24-pin-rev-a/: README.md
sdrr-pcb/verified/stm32f4-24-pin-rev-f2/: README.md
sdrr-pcb/verified/stm32f4-24-pin-rev-g/: README.md
sdrr-tester/: Cargo.toml  README.md
sdrr/include/: config_base.h  constants.h  functions.h  include.h  reg-rp235x.h  reg-stm32f1.h  reg-stm32f4.h  registers.h  rp235x_inlines.h  stm32f4_inlines.h
sdrr/link/: common.ld  common_vars.ld  flash_main_loop.ld  flash_rodata.ld  ram_data.ld  ram_sdrr_runtime_info.ld  stm32f-common.ld  stm32f103x8.ld  stm32f103xb.ld  stm32f401xb.ld  stm32f401xc.ld  stm32f401xe.ld  stm32f405xg.ld  stm32f411xc.ld  stm32f411xe.ld  stm32f446xc.ld  stm32f446xe.ld
sdrr/src/: constants.c  main.c  rom_asm.h  rom_impl.c  rp235x.c  stm32f4.c  utils.c  vector.c
test/: Makefile  README.md
test/include/: json-config.h  roms-test.h
test/src/: check-roms.c  json-config.c  load-config.c  main.c  query-roms.c
(+65 files in other folders)
