[package]
name = "sdrr-common"
version = "0.3.1"
edition = "2024"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "Software Defined Retro ROM (SDRR) common Rust library"
repository = "https://github.com/piersfinlayson/software-defined-retro-rom"
readme = "README.md"
license = "MIT"
keywords = ["embedded", "rom", "eeprom", "eprom", "flash"]

[dependencies]
anyhow = ">=1.0.98"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
