[package]
name = "sdrr-fw-parser"
version = "0.2.1"
edition = "2024"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "Software Defined Retro ROM (SDRR) firmware parser"
repository = "https://github.com/piersfinlayson/software-defined-retro-rom"
readme = "README.md"
license = "MIT"
keywords = ["commodore", "sdrr", "rom", "eprom", "flash"]
categories = ["parsing", "embedded", "hardware-support", "no-std", "development-tools"]

[features]
default = ["std"]
std = ["deku/std"]

[dependencies]
deku = { version = "0.19", default-features = false, features = ["alloc"] }
static_assertions = "1.1"
